<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2018-2020 DJI
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy
  ~ of this software and associated documentation files (the "Software"), to deal
  ~ in the Software without restriction, including without limitation the rights
  ~ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  ~ copies of the Software, and to permit persons to whom the Software is
  ~ furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all
  ~ copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  ~ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
  ~ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
  ~ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
  ~ SOFTWARE.
  ~
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/main_activity">

    <ScrollView
        android:id="@+id/view_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        app:layout_constraintHorizontal_weight=".3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@color/transparent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/text_view_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/colorFont"
                    android:textSize="16sp"
                    tools:text="Version"/>

                <TextView
                    android:id="@+id/text_view_registered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/unregistered"
                    android:textColor="@color/colorFont"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/text_view_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:gravity="center"
                    android:text="@string/no_product"
                    android:textColor="@color/colorFont"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/text_view_server_ip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="4dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/server_ip"
                    android:textColor="@color/colorFont"
                    android:textColorHint="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

    </ScrollView>

    <dji.ux.beta.core.widget.useraccount.UserAccountLoginWidget
        android:id="@+id/widget_user_login"
        android:layout_width="200dp"
        android:layout_height="50dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_scroll"/>

    <com.ncorti.slidetoact.SlideToActView
        android:id="@+id/camera_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:elevation="6dp"
        app:area_margin="4dp"
        app:icon_margin="6dp"
        app:animation_duration="250"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_user_login"
        app:outer_color="@color/colorPrimary"
        app:slider_height="40dp"
        app:slider_icon="@drawable/icon_slider"
        app:slider_locked="false"
        app:text="@string/camera_view"
        app:text_appearance="@style/BottomText"
        app:text_size="18sp" />

</androidx.constraintlayout.widget.ConstraintLayout>